# learning-and-job-recommendation

./: README.md  job recommentation project and apti.code-workspace  pyproject.toml  requirements.txt  sql1.sql
apti1/: app1.py
apti1/templates/: index.html  style.css  test.css  test.html
aptitude_test/: app.py  db.sql  sample.sql
aptitude_test/static/: style1.css  style3.css
aptitude_test/templates/: fullscreen.css  index.html  intro.css  result.html  style4.css  test.html
c1/: 1app.py
c1/templates/: result.html  speak.html
c2/: pyton123.py
c2/templates/: result.html  test.html
cloud/: app.py
cloud/templates/: code_round.html  result.html
communication_test/: com.py
communication_test/static/: style.css  style1.css
communication_test/templates/: index.html  listen_and_repeat.html  listen_repeat.html  listen_repeat_audio.html  listen_repeat_whatsapp.html  listen_result.html  mcq.html  one_minute_speech.html  reading.html  reading_listening.html  reading_result.html  result.html  simple.html  style.css  (+1 more)
job recommentation project/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  app.py  comany.html  companies.html  e.py  frond1.html  frond10.html  frond2.html  frond3.html  frond4.html  frond5.html  frond6.html  frond7.html  frond8.html  frond9.html  frondpage.html  homepage.html  image.html  image1.html  index.html  login.html  (+3 more)
project/: front.html  simple.html
tech/: app.py
technical_HR/: app.py  requirements.txt
(+23 files in other folders)
