[project]
name = "technical-hr"
version = "0.1.0"
description = ""
authors = [
    {name = "manikathangaraj7071-web",email = "manikathangaraj7071@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
